default message (instead of blank message), readme, updated versions of libs, release version